--- a/public/location/index.html
+++ b/public/location/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
-<title>Location | Horacio Moreno Montanes</title>
+<meta name="robots" content="noindex, nofollow">
+<title>Location | Horacio Moreno Montañes</title>
 <meta name="keywords" content="">
 <meta name="description" content="Mailing and office addresses at the University of Place.">
 <meta name="author" content="Name">
-<link rel="canonical" href="https://www.horaciomorenom.me/location/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.8e937968cb8b776c8bdb094f3aad6442cfbbdfdd934f23c8f4f24749d1a31d37.css" integrity="sha256-jpN5aMuLd2yL2wlPOq1kQs&#43;7392TTyPI9PJHSdGjHTc=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://www.horaciomorenom.me/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://www.horaciomorenom.me/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://www.horaciomorenom.me/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://www.horaciomorenom.me/apple-touch-icon.png">
+<link rel="canonical" href="http://localhost:1313/location/">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.fe87366398e9e8575b7f9536595feaa61e75def286fffaddfbcedc048822e914.css" integrity="sha256-/oc2Y5jp6Fdbf5U2WV/qph513vKG//rd&#43;87cBIgi6RQ=" rel="preload stylesheet" as="style">
+<link rel="icon" href="http://localhost:1313/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
 
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/location/">
 <noscript>
     <style>
         #theme-toggle,
@@ -29,7 +30,7 @@
 </noscript><meta property="og:title" content="Location" />
 <meta property="og:description" content="Mailing and office addresses at the University of Place." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://www.horaciomorenom.me/location/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://localhost:1313/location/" /><meta property="article:section" content="" />
 
 
 
@@ -47,7 +48,7 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "Location",
-      "item": "https://www.horaciomorenom.me/location/"
+      "item": "http://localhost:1313/location/"
     }
   ]
 }
@@ -73,14 +74,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://www.horaciomorenom.me/location/"
+    "@id": "http://localhost:1313/location/"
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Horacio Moreno Montanes",
+    "name": "Horacio Moreno Montañes",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.horaciomorenom.me/favicon.ico"
+      "url": "http://localhost:1313/favicon.ico"
     }
   }
 }
@@ -122,39 +123,35 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://www.horaciomorenom.me/" accesskey="h" title="Prof. Name">
+            <a href="http://localhost:1313/" accesskey="h" title="Horacio">
              
-                <img src="https://www.horaciomorenom.me/favicon.ico" alt="" aria-label="logo"
+                <img src="http://localhost:1313/favicon.ico" alt="" aria-label="logo"
                     height="18"
-                    width="18">Prof. Name</a>
+                    width="18">Horacio</a>
             <div class="logo-switches">
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="https://www.horaciomorenom.me/papers/" title="Papers">
-                    <span>Papers</span>
+                <a href="http://localhost:1313/cv.pdf" title="CV">
+                    <span>CV</span>
                 </a>
             </li>
             <li>
-                <a href="https://www.horaciomorenom.me/courses/" title="Courses">
-                    <span>Courses</span>
+                <a href="http://localhost:1313/projects/" title="Projects">
+                    <span>Projects</span>
                 </a>
             </li>
             <li>
-                <a href="https://www.horaciomorenom.me/data/" title="Data">
-                    <span>Data</span>
+                <a href="http://localhost:1313/thoughts/" title="Thoughts">
+                    <span>Thoughts</span>
                 </a>
             </li>
             <li>
-                <a href="https://www.horaciomorenom.me/" title="Newsletter">
-                    <span>Newsletter</span>&nbsp;
-                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
-                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
-                        <path d="M15 3h6v6"></path>
-                        <path d="M10 14L21 3"></path>
-                    </svg>
+                <a href="http://localhost:1313/tags/" title="Keywords">
+                    <span>Keywords</span>
                 </a>
             </li>
         </ul>
@@ -195,7 +192,7 @@ University of Place</p>
     </main>
     
 <footer class="footer">
-    &copy; 2023 Horacio Moreno Montanes
+    &copy; 2025 Horacio Moreno Montañes
     <span>
     &middot;  Powered by 
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
